refactor get report
